Fixed image overlaps

--- a/app/assets/stylesheets/photo.css
+++ b/app/assets/stylesheets/photo.css
@@ -13,4 +13,6 @@
   border-radius: 4px;
   max-width: 200px;
   max-height: 200px;
+  z-index: -100;
+
 }
